include/starpu_worker.h


unsigned starpu_worker_get_memory_node(unsigned workerid);
unsigned starpu_memory_nodes_get_count(void);
enum starpu_node_kind starpu_node_get_kind(unsigned node);
void starpu_worker_set_going_to_sleep_callback(void (*callback)(unsigned workerid));
void starpu_worker_set_waking_up_callback(void (*callback)(unsigned workerid));